# ponix-end-devices

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  buf.yaml  docker-compose.yaml  justfile
.cargo/: config.toml
blink-rp2350/: CLAUDE.md  Cargo.toml
blink-rp2350/.cargo/: config.toml
blink-rp2350/src/: main.rs
flow_sensor/: Cargo.toml
libs/: todo.txt
services/peripheral_esp32s3/: Cargo.toml
src/: main.rs
temp-humidity-rp2350/: CLAUDE.md  Cargo.toml  build.rs
temp-humidity-rp2350/src/: main.rs
weather-nrf52840/: Cargo.toml
weather-nrf52840/src/: main.rs
