[package]
name = "temp-humidity-rp2350"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }

# Logging/Debug
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Core
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
static_cell = "2"
rand = { version = "0.9.0", default-features = false }

# AHT20 temperature/humidity sensor
embedded-aht20 = { git = "https://github.com/ghismary/embedded-aht20", features = ["async"] }
