[package]
name = "temp-humidity-rp2350"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy (git - for latest API)
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }

# Logging/Debug
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Core
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
static_cell = "2"

# AHT20 temperature/humidity sensor
embedded-aht20 = { git = "https://github.com/ghismary/embedded-aht20", features = ["async"] }
