[package]
name = "temp-humidity-rp2350"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy (pinned to same commit as blink-rp2350)
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "a6705c550836fc23ef52dcbbe6c26c9fd6f45c98", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a6705c550836fc23ef52dcbbe6c26c9fd6f45c98", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "a6705c550836fc23ef52dcbbe6c26c9fd6f45c98", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }

# CYW43 WiFi driver
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "a6705c550836fc23ef52dcbbe6c26c9fd6f45c98", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "a6705c550836fc23ef52dcbbe6c26c9fd6f45c98", features = ["defmt"] }

# Networking stack
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "a6705c550836fc23ef52dcbbe6c26c9fd6f45c98", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }

# Logging/Debug
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Core
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
static_cell = "2"
aligned = "0.4"

# AHT20 temperature/humidity sensor
embedded-aht20 = { git = "https://github.com/ghismary/embedded-aht20", features = ["async"] }

[profile.release]
debug = 2
